--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=AIProjectBackend
 spring.ai.openai.api-key=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
-
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=ai_db
+spring.data.mongodb.auto-index-creation=true
 #spring.security.oauth2.client.registration.google.client-id=1057601060505-gclp0822c77ttd4il9bkkiopl98lescc.apps.googleusercontent.com
 #spring.security.oauth2.client.registration.google.client-secret=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
