--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,16 @@ spring.data.mongodb.database=ai_db
 spring.data.mongodb.auto-index-creation=true
 #spring.security.oauth2.client.registration.google.client-id=1057601060505-gclp0822c77ttd4il9bkkiopl98lescc.apps.googleusercontent.com
 #spring.security.oauth2.client.registration.google.client-secret=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
+
+jwt.secret.key = secretKey
+
+#sever.servlet.context-path=/api/v1.0
+
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=913d8e001@smtp-brevo.com
+spring.mail.password=Y93tLUNRDZG7rh1z
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.from=amishanand2000@gmail.com
